feat: complete task10

--- a/index.html
+++ b/index.html
@@ -93,6 +93,45 @@
       <a href="#">test</a>
       <a href="#e">test</a>
       <a href="#ewe">go</a>
+
+      <h1>6</h1>
+      <ul class="task6">
+        <li class="task6-li">Element</li>
+        <li class="task6-li">Element</li>
+        <li class="task6-li">Element</li>
+        <li class="task6-li">Element</li>
+      </ul>
+
+      <h1>7</h1>
+      <div class="square">
+        <div class="square__item square__item_red"></div>
+        <div class="square__item square__item_blue"></div>
+        <div class="square__item square__item_green"></div>
+      </div>
+
+      <h1>8</h1>
+      <div class="square square__task7">
+        <div class="square__item square__item_red"></div>
+        <div class="square__item square__item_blue"></div>
+        <div class="square__item square__item_green"></div>
+      </div>
+
+      <h1>9</h1>
+      <div class="square square__task7">
+        <div class="square__item square__item_red square__item_redfill"></div>
+        <div class="square__item square__item_blue square__item_bluefill"></div>
+        <div
+          class="square__item square__item_green square__item_greenfill"
+        ></div>
+      </div>
+      <h1>10</h1>
+      <div class="square square__task7 square__task10">
+        <div class="square__item square__item_red square__item_redfill"></div>
+        <div class="square__item square__item_blue square__item_bluefill"></div>
+        <div
+          class="square__item square__item_green square__item_greenfill"
+        ></div>
+      </div>
     </div>
   </body>
 </html>
