feat: complete task12

--- a/index.html
+++ b/index.html
@@ -132,6 +132,18 @@
           class="square__item square__item_green square__item_greenfill"
         ></div>
       </div>
+
+      <h1>11</h1>
+      <div class="background-block">
+        <div class="sq"></div>
+        <div class="sq"></div>
+      </div>
+    </div>
+    <h1>12</h1>
+    <div class="body">
+      <aside></aside>
+      <div class="body__block"></div>
+      <div class="banner"></div>
     </div>
   </body>
 </html>
