feat: complete task2

--- a/index.html
+++ b/index.html
@@ -4,13 +4,60 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/Teachmeskills_Lessons/src/css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
-    <a href="#" class="link">Ссылка 1</a>
+    <!-- <a href="#" class="link">Ссылка 1</a>
     <a href="#" class="link">Ссылка 2</a>
     <a href="#" class="link">Ссылка 3</a>
     <a href="#" class="link">Ссылка 4</a>
-    <a href="#" class="link">Ссылка 5</a>
+    <a href="#" class="link">Ссылка 5</a> -->
+    <div class="main">
+      <div class="header">
+        <div class="nav">
+          <div class="burger">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <div class="header__search">
+            <img
+              class="search__img"
+              src="/Teachmeskills_Lessons/src/img/search.svg"
+              alt="search"
+            />
+            <input type="text" class="search__input" placeholder="Поиск" />
+            <img
+              class="search__icon"
+              src="/Teachmeskills_Lessons/src/img/person.svg"
+              alt="person"
+            />
+            <img
+              class="search__icon"
+              src="/Teachmeskills_Lessons/src/img/square.svg"
+              alt="square"
+            />
+          </div>
+          <!--/.header__search-->
+        </div>
+        <!--/.header-->
+        <div class="main__content">
+          <h1 class="main__title">Motorsboat</h1>
+          <h2 class="main__subtitle">лодки & моторы</h2>
+          <button class="main__button">
+            Перейти в каталог
+            <img
+              class="arrow"
+              src="/Teachmeskills_Lessons/src/img/arrow.svg"
+              alt="arrow"
+            />
+          </button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
