feat: complete task3

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/Teachmeskills_Lessons/src/css/style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
     <title>Document</title>
@@ -16,7 +16,9 @@
     <a href="#" class="link">Ссылка 3</a>
     <a href="#" class="link">Ссылка 4</a>
     <a href="#" class="link">Ссылка 5</a> -->
-    <div class="main">
+
+    <!-- ---------------------Task 2--------------------- -->
+    <!-- <div class="main">
       <div class="header">
         <div class="nav">
           <div class="burger">
@@ -42,9 +44,7 @@
               alt="square"
             />
           </div>
-          <!--/.header__search-->
         </div>
-        <!--/.header-->
         <div class="main__content">
           <h1 class="main__title">Motorsboat</h1>
           <h2 class="main__subtitle">лодки & моторы</h2>
@@ -58,6 +58,72 @@
           </button>
         </div>
       </div>
-    </div>
+    </div> -->
+    <section class="goods">
+      <h2 class="goods__title">Хиты продаж</h2>
+      <div class="container">
+        <div class="goods__row">
+          <div class="good__item">
+            <div class="good__icon">
+              <img
+                src="/Teachmeskills_Lessons/src/img/task3/icon.svg"
+                alt="icon"
+              />
+            </div>
+            <div class="good__img">
+              <img
+                src="/Teachmeskills_Lessons/src/img/task3/1.png"
+                alt="picture"
+              />
+            </div>
+            <div class="good__content">
+              <h2 class="good__title">Кускен Navy Blue</h2>
+              <span class="good__categor">Диваны</span>
+              <span class="good__price">2 300₽</span>
+            </div>
+          </div>
+
+          <div class="good__item">
+            <div class="good__icon">
+              <img
+                src="/Teachmeskills_Lessons/src/img/task3/icon.svg"
+                alt="icon"
+              />
+            </div>
+            <div class="good__img">
+              <img
+                src="/Teachmeskills_Lessons/src/img/task3/2.png"
+                alt="picture"
+              />
+            </div>
+            <div class="good__content">
+              <h2 class="good__title">Кускен Navy Blue</h2>
+              <span class="good__categor">Диваны</span>
+              <span class="good__price">2 300₽</span>
+            </div>
+          </div>
+
+          <div class="good__item">
+            <div class="good__icon">
+              <img
+                src="/Teachmeskills_Lessons/src/img/task3/icon.svg"
+                alt="icon"
+              />
+            </div>
+            <div class="good__img">
+              <img
+                src="/Teachmeskills_Lessons/src/img/task3/3.png"
+                alt="picture"
+              />
+            </div>
+            <div class="good__content">
+              <h2 class="good__title">Кускен Navy Blue</h2>
+              <span class="good__categor">Диваны</span>
+              <span class="good__price">2 300₽</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
