feat: complete first task

--- a/index.html
+++ b/index.html
@@ -3,7 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/Teachmeskills_Lessons/src/css/style.css" />
     <title>Lesson_9</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="header"></div>
+      <div class="wrapper">
+        <div class="wrapper__item">
+          <div class="wrapper__item-title"></div>
+          <div class="wrapper__el"></div>
+          <div class="wrapper__el"></div>
+          <div class="wrapper__el"></div>
+          <div class="wrapper__el"></div>
+          <div class="wrapper__el"></div>
+          <div class="wrapper__el"></div>
+        </div>
+        <div class="wrapper__item">
+          <div class="wrapper__item-title"></div>
+          <div class="wrapper__el"></div>
+          <div class="wrapper__el"></div>
+          <div class="wrapper__el"></div>
+          <div class="wrapper__el"></div>
+          <div class="wrapper__el"></div>
+          <div class="wrapper__el"></div>
+        </div>
+        <div class="wrapper__item">
+          <div class="wrapper__item-title"></div>
+          <div class="wrapper__el"></div>
+          <div class="wrapper__el"></div>
+          <div class="wrapper__el"></div>
+          <div class="wrapper__el"></div>
+          <div class="wrapper__el"></div>
+          <div class="wrapper__el"></div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
