init: first commit

--- a/index.html
+++ b/index.html
@@ -6,93 +6,5 @@
     <link rel="stylesheet" href="src/css/style.css" />
     <title>Lesson6</title>
   </head>
-  <body>
-    <div class="container text">
-      <h1>1</h1>
-      <h1>Открывок из книги</h1>
-      <p>
-        <span>Начало:</span>
-        <span
-          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt,
-          cum? Reprehenderit velit est assumenda quidem exercitationem, commodi
-          a soluta. Dolore alias voluptatem quo distinctio!</span
-        >
-        <span>конец</span>
-      </p>
-
-      <p>
-        <span>Начало:</span>
-        <span
-          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt,
-          cum? Reprehenderit</span
-        >
-        <span>конец</span>
-      </p>
-
-      <p>
-        <span>Начало:</span>
-        <span
-          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt,
-          cum? Reprehenderit velit est assumenda quidem exercitationem, commodi
-          a soluta. Dolore alias voluptatem quo distinctio!Lorem ipsum dolor sit
-          amet consectetur adipisicing elit. Deserunt, cum? Reprehenderit velit
-          est assumenda quidem exercitationem, commodi a soluta. Dolore alias
-          voluptatem quo distinctio</span
-        >
-        <span>конец</span>
-      </p>
-
-      <p>
-        <span>Начало:</span>
-        <span
-          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt,
-          cum? Reprehenderit velit est assumenda quidem exercitationem, commodi
-          a soluta. Dolore alias voluptatem quo distinctio!quidem
-          exercitationem, commodi a soluta. Dolore alias voluptatem quo
-          distinctio!</span
-        >
-        <span>конец</span>
-      </p>
-
-      <h1>2</h1>
-      <ul>
-        <li>Element 1</li>
-        <li>Element 2</li>
-        <li>Element 3</li>
-        <li>Element 4</li>
-      </ul>
-
-      <h1>3</h1>
-      <ul class="task3">
-        <li>Element 1</li>
-        <li>Element 2</li>
-        <li>Element 3</li>
-        <li>Element 4</li>
-      </ul>
-
-      <h1>4</h1>
-
-      <div class="text">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora saepe
-        amet nihil qui esse magnam fuga doloribus laborum tempore sequi!
-      </div>
-
-      <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore laborum
-        eum voluptatem, dicta reiciendis, dignissimos, aliquid obcaecati
-        blanditiis quidem cumque exercitationem voluptas nam natus ipsum earum.
-        Nemo illum minima voluptas.
-      </div>
-
-      <div class="text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore pariatur
-        placeat maiores quae, in molestias.
-      </div>
-
-      <h1>5</h1>
-      <a href="#">test</a>
-      <a href="#e">test</a>
-      <a href="#ewe">go</a>
-    </div>
-  </body>
+  <body></body>
 </html>
