feat: complete task

--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Lesson12 - Animation</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="balls">
+        <div class="ball-container">
+          <div class="ball ball_1"></div>
+        </div>
+        <div class="ball-container">
+          <div class="ball ball_2"></div>
+        </div>
+        <div class="ball-container">
+          <div class="ball ball_3"></div>
+        </div>
+        <div class="ball-container">
+          <div class="ball ball_4"></div>
+        </div>
+        <div class="ball-container">
+          <div class="ball ball_5"></div>
+        </div>
+        <div class="ball-container">
+          <div class="ball ball_6"></div>
+        </div>
+        <div class="ball-container">
+          <div class="ball ball_7"></div>
+        </div>
+        <div class="ball-container">
+          <div class="ball ball_8"></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
